[VMWare] Add DHCP network support
Added new configuration option called 'vm_ipaddr_allocation_type'.
It can be defined to one of two values:
- dhcp (new approach)
- static (old approach)

In addition, do following:
- allow to disable haproxy if only 1 master is configured
- keep executing not failing when infra nodes are not provisioned
- add "server_hostname" var back to the rhsm role.

--- a/reference-architecture/vmware-ansible/ocp-on-vmware.ini
+++ b/reference-architecture/vmware-ansible/ocp-on-vmware.ini
@@ -71,6 +71,9 @@ storage_nodes=0
 # start node IP address *must be a contiguous space
 vm_ipaddr_start=
 
+# VM IP addresses allocation type. Can be either 'dhcp' or 'static'.
+vm_ipaddr_allocation_type=dhcp
+
 # node hostname prefix
 ocp_hostname_prefix=
 
