[VMWare] Handle hostnames and IP addresses correctly
By doing following:
- Add mapping of new node domain names for each other
- Use master IPv4 address when LB is absent (masters < 2)
- Update wildcards and related options correctly

Also, include following:
- Disable NFS installation and usage
- Use only 'app' selectors
- Update CNS node installation playbook

--- a/reference-architecture/vmware-ansible/playbooks/node-setup.yaml
+++ b/reference-architecture/vmware-ansible/playbooks/node-setup.yaml
@@ -18,8 +18,8 @@
     openshift_master_api_port: "{{ console_port }}"
     openshift_master_console_port: "{{ console_port }}"
     osm_cluster_network_cidr: 172.16.0.0/16
-    openshift_registry_selector: "role=infra"
-    openshift_router_selector: "role=infra"
+    openshift_registry_selector: "role=app"
+    openshift_router_selector: "role=app"
     openshift_node_local_quota_per_fsgroup: 512Mi
     openshift_master_cluster_method: native
     openshift_cloudprovider_kind: vsphere
