[VMWare] Handle hostnames and IP addresses correctly
By doing following:
- Add mapping of new node domain names for each other
- Use master hostname when LB is absent (masters == 1)
- Update wildcards and related options correctly

Also, include following:
- Disable NFS installation and usage
- Use only 'app' selectors

--- a/reference-architecture/vmware-ansible/playbooks/prod.yaml
+++ b/reference-architecture/vmware-ansible/playbooks/prod.yaml
@@ -4,12 +4,14 @@
     - vars/main.yaml
   roles:
     - create-vm-prod-ose
+    - setup-custom-domain-names-for-ansible-runner
 
 - name: fulfill OSE3 prerequisites on production hosts roles
   hosts: production_group
   vars_files:
     - vars/main.yaml
   roles:
+    - setup-custom-domain-names
     - rhsm
     - vmware-guest-setup
     - cloud-provider-setup
