[VMWare] Use domain names instead of IP addresses in configs
Kubernetes requires domain names in configuration, not IP addresses.
So, use domain names and make sure ansible host has connectivity
updating its /etc/hosts file.

--- a/reference-architecture/vmware-ansible/playbooks/prod.yaml
+++ b/reference-architecture/vmware-ansible/playbooks/prod.yaml
@@ -5,6 +5,7 @@
   roles:
     - create-vm-prod-ose
     - setup-control-plane-endpoint
+    - setup-custom-domain-names-for-ansible-runner
 
 - name: fulfill OSE3 prerequisites on production hosts roles
   hosts: production_group
