[VMWare] Make 'add node' logic support DHCP and local DNS
The same way as common installator is able to do.
Also, remove redundant picking up of master0 IP address and use its
domain name directly when lb is absent.

--- a/reference-architecture/vmware-ansible/playbooks/add-node.yaml
+++ b/reference-architecture/vmware-ansible/playbooks/add-node.yaml
@@ -7,6 +7,7 @@
   - vars/main.yaml
   roles:
   - create-vm-add-prod-ose
+  - setup-custom-domain-names-for-ansible-runner
 
 - hosts: new_nodes
   gather_facts: yes
@@ -14,6 +15,7 @@
   vars_files:
   - vars/main.yaml
   roles:
+  - setup-custom-domain-names
   - instance-groups
   - rhsm
   - vmware-guest-setup
@@ -21,6 +23,13 @@
   - docker-storage-setup
   - openshift-volume-quota
 - include: add-node-prerequisite.yaml
+
+- name: Map domain names and IP addresses of old and new nodes to each other
+  hosts: loadbalancer, master, infra, app, cns, crs, !new_nodes
+  vars_files:
+    - vars/main.yaml
+  roles:
+    - setup-custom-domain-names
 
 - include: node-setup.yaml
 
