--- a/reference-architecture/vmware-ansible/playbooks/roles/create-vm-add-prod-ose/tasks/main.yaml
+++ b/reference-architecture/vmware-ansible/playbooks/roles/create-vm-add-prod-ose/tasks/main.yaml
@@ -1,46 +1,8 @@
 ---
-- name: Assign app memory for container_storage
+- name: Add following nodes to the 'new_nodes' group
   set_fact:
-    app_memory: 32768
-  when: "'cns' in container_storage"
+    is_add_nodes: true
 
-- name: Assign app memory for container_storage
-  set_fact:
-    app_memory: 8192
-  when: "'cns' not in container_storage"
-
-- name: Create additional production VMs on vCenter
-  vmware_guest:
-    hostname: "{{ vcenter_host }}"
-    username: "{{ vcenter_username }}"
-    password: "{{ vcenter_password }}"
-    validate_certs: False
-    name: "{{ item.value.guestname }}"
-    cluster: "{{ vcenter_cluster}}"
-    datacenter: "{{ vcenter_datacenter }}"
-    resource_pool: "{{ vcenter_resource_pool }}"
-    template: "{{vcenter_template_name}}"
-    state: poweredon
-    wait_for_ip_address: True
-    folder: "/{{ vcenter_folder }}"
-    annotation: "{{ item.value.tag }}"
-    hardware:
-      memory_mb: "{{ app_memory }}"
-    networks:
-    - name: "{{ vm_network }}"
-      ip: "{{ item.value.ip4addr }}"
-      netmask: "{{ vm_netmask }}"
-      gateway: "{{ vm_gw }}"
-    customization:
-      domain: "{{dns_zone}}"
-      dns_servers:
-      - "{{ vm_dns }}"
-      dns_suffix: "{{dns_zone}}"
-      hostname: "{{ item.value.guestname}}"
-  with_dict: "{{host_inventory}}"
-  when: "'master' in item.value.guestname or 'app' in item.value.guestname or 'infra' in item.value.guestname"
-
-- name: Add additional production VMs to inventory
-  add_host: hostname="{{ item.value.guestname }}" ansible_ssh_host="{{ item.value.ip4addr }}" groups="{{ item.value.tag }}, production_group, new_nodes"
-  with_dict: "{{host_inventory}}"
-  when: "'master' in item.value.guestname or 'app' in item.value.guestname or 'infra' in item.value.guestname"
+- name: Import common node creation role
+  import_role:
+    name: create-vm-prod-ose
