--- a/reference-architecture/vmware-ansible/playbooks/roles/create-vm-prod-ose/tasks/main.yaml
+++ b/reference-architecture/vmware-ansible/playbooks/roles/create-vm-prod-ose/tasks/main.yaml
@@ -1,4 +1,8 @@
 ---
+- name: Get to know whether we need to add following nodes to "new_nodes" group or not
+  set_fact:
+    is_add_nodes: "{{ is_add_nodes | default(false) }}"
+
 - name: Define DHCP network parameters per node
   set_fact:
     network_parameters: "{{ network_parameters | default({}) |
@@ -83,6 +87,6 @@
     hostname: "{{ item.value.guestname }}"
     ansible_fqdn: "{{ item.value.guestname }}.{{ dns_zone }}"
     ansible_ssh_host: "{{ ip4addrs[item.value.guestname] }}"
-    groups: "{{ item.value.tag }}, production_group"
+    groups: "{{ item.value.tag }}, production_group{{ is_add_nodes | ternary(', new_nodes', '')}}"
   with_dict: "{{ host_inventory }}"
   when: "item.value.guesttype in ['app', 'master', 'infra']"
