[VMWare] Make CNS installation work using DHCP
Also, fix order and amount of roles called during CNS
installation:
- Do not run two roles on the ansible host that are dedicated
  to the OCP nodes.
- Add one lost role to the CNS set of roles

--- a/reference-architecture/vmware-ansible/playbooks/cns-node-setup.yaml
+++ b/reference-architecture/vmware-ansible/playbooks/cns-node-setup.yaml
@@ -5,10 +5,19 @@
   vars_files:
   - vars/main.yaml
   roles:
+  - setup-custom-domain-names
   - instance-groups
   - rhsm
   - vmware-guest-setup
+  - cloud-provider-setup
   - docker-storage-setup
   - openshift-volume-quota
   - gluster-ports
 - include: add-node-prerequisite.yaml
+
+- name: Map domain names and IP addresses of old and new nodes to each other
+  hosts: loadbalancer, master, infra, app, crs
+  vars_files:
+    - vars/main.yaml
+  roles:
+    - setup-custom-domain-names
