--- a/reference-architecture/vmware-ansible/playbooks/prod-ose-cns.yaml
+++ b/reference-architecture/vmware-ansible/playbooks/prod-ose-cns.yaml
@@ -8,5 +8,4 @@
   roles:
   # Group systems
   - create-vm-cns-prod-ose
-  - cloud-provider-setup
-  - instance-groups
+  - setup-custom-domain-names-for-ansible-runner
